# retrieval-augmented-generation-stack

./: LICENSE  README.md  main.py  pyproject.toml
vector-embeddings/: embeddings.ipynb  retriever_function.ipynb
